remove duplicate body elements in css to fix excess white space on bottom of page issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
-
 .App {
   text-align: center;
 }
@@ -39,6 +30,7 @@ body {
   text-align: center;
   padding: 10px;
   margin: 5px;
+  overflow-x: hidden; 
 }
 
 #itsame {
@@ -256,6 +248,7 @@ button:active {
   padding: 5px 0 0 0;
   background-color: rgba(0, 0, 0, 0.33);
   border-radius: 55px/55px;
+  overflow: hidden;
 }
 
 h1 {
